--- a/newsClient/src/index.css
+++ b/newsClient/src/index.css
@@ -6,7 +6,7 @@ body {
     font:normal 16px 'Roboto', sans-serif;
 	line-height:1.3;
 	color:#666666;
-	background-color: #E5E5E5;
+	background-color: #fff;
 	margin:0;
 	padding:0;
 }
